# Moviebarcode

./: .gitignore  Dockerfile  README.md  generate_barcode.sh  main.py  pyproject.toml
